--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
             <groupId>com.vaadin</groupId>
@@ -74,6 +74,11 @@
             <artifactId>jna</artifactId>
             <version>4.1.0</version>
         </dependency>   
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+        
     </dependencies>
 
     <dependencyManagement>
